<resources>
    <string name="app_name">Konspekt9_3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Settings</string>
    <string name="menu_gallery">Shoutbox</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="who">Who Are You?</string>
    <string name="login">login</string>
    <string name="setLogin">Set login</string>

    <string name="ButtonNewComment">Make new Comment</string>

    <string name="textViewContent">Content:</string>
    <string name="textViewNick">Nick:</string>
    <string name="buttonSend">Send</string>

    <string name="textViewActualLogin">Actual login:</string>
    <string name="textViewNewLogin">New login:</string>
    <string name="textViewNewContent">New Content</string>
    <string name="buttonEditComment">Edit</string>

    <string name="buttonEditCommentComment">Edit Comment</string>

    <string name="textViewOldLogin">Old login:</string>

    <string name="buttonDelete">Delete</string>
</resources>