<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditComment">

    <TextView
        android:id="@+id/textViewNewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="109dp"
        android:text="@string/textViewNewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="12dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/oldLogin"
        app:layout_constraintTop_toTopOf="@+id/oldLogin" />

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="61dp"
        android:text="@string/textViewContent"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintStart_toStartOf="@+id/content" />

    <EditText
        android:id="@+id/content"
        android:layout_width="322dp"
        android:layout_height="231dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="190dp"
        android:gravity="left"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewOldLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/textViewOldLogin"
        app:layout_constraintEnd_toEndOf="@+id/textViewNewLogin"
        app:layout_constraintStart_toStartOf="@+id/textViewNewLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/oldLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="162dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDeleteComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/oldLogin"
        app:layout_constraintStart_toEndOf="@+id/textViewOldLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>